--- a/workflow.yaml
+++ b/workflow.yaml
@@ -3,15 +3,11 @@
 name: Falcon Sensor ACR Sync
 
 on:
-  # Triggers on push to main
   push:
     branches: [ "main" ]
-  # Triggers on PR to main
   pull_request:
     branches: [ "main" ]
-  # Manual trigger
   workflow_dispatch:
-  # Runs every hour
   schedule:
     - cron: '0 * * * *'
 
@@ -45,7 +41,7 @@ jobs:
       - name: Login to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: crmiked.azurecr.io
+          login-server: <youracr>.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
@@ -64,7 +60,7 @@ jobs:
           --client-secret "$FSCSECRET" \
           --region us-1 \
           --type falcon-sensor \
-          --copy crmiked.azurecr.io/falcon-sensor
+          --copy <youracr>.azurecr.io/falcon-sensor
 
           echo "✅ Sensor processing complete"
 
@@ -77,11 +73,3 @@ jobs:
           falcon_client_id: ${{ vars.FALCON_CLIENT_ID }}
           falcon_region: 'us-1'
           path: './'
-
-      - name: Workflow Summary
-        run: |
-          echo "## Falcon Sensor Sync Complete" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Environment verified" >> $GITHUB_STEP_SUMMARY
-          echo "✅ ACR login successful" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Sensor downloaded and pushed" >> $GITHUB_STEP_SUMMARY
-          echo "✅ IaC scan completed" >> $GITHUB_STEP_SUMMARY
